styles/styles.css
/* 
 * Put project specific base styles here.
 *
 * Note: The proect does not load this file.
 *       You will need to load these using scripts.js.
 * 
 *
 */
html body {
  background-color: var(--color-gray-100);
}

body > header,
body > footer {
  display: none;
}

main {
  display: block;
  margin: 0 auto 2rem;
  background-color: var(--background-color);
  border-radius: 8px;
  border: 1px solid var(--color-gray-200);
}

h2 {
  margin-top: 3rem;
  scroll-margin: 2rem;
}

h3, h4 {
  scroll-margin: 1rem;
}

.section {
  grid-area: content;
  padding: 1rem;
}

.section:has(.hero) {
  position: relative;
  padding: 0;
  width: 100%;
}

.section:has(.toc) {
  grid-area: toc;
}

body {
  counter-reset: h4counter;
}

h2, h3 {
  counter-reset: h4counter;
}

h4:before {
  content: counter(h4counter) ".\0000a0\0000a0";
  counter-increment: h4counter;
  counter-reset: h3counter;
}

code {
  background-color: var(--color-gray-200);
  padding: 0 .25rem;
}

@media (min-width: 600px) {
  main {
    display: grid;
    margin-top: 164px;
    gap: 3rem;
    grid-template: 'toc content' / 280px 1fr;
    max-width: var(--grid-container-width);
    min-height: calc(100vh - 2rem - 164px);
  }

  .section:has(.hero) {
    position: absolute;
    height: 335px;
    top: 0;
    left: 0;
  }

  main > .section > div:not(.toc),
  main > .section > div.content {
    max-width: none;
    margin-right: 3rem;
  }
}

